# enhanced-bedjet

./: .env.example  .gitignore  AGENTS.md  README.md  bedjet-ble.service  bedjet-hub.service
app/: bedjet-ui.service  index.html  package-lock.json  package.json  vite.config.js
app/public/: manifest.json  sw.js
app/src/: App.jsx  ControlScreen.jsx  ControlScreen.test.jsx  ProgramsScreen.jsx  ProgramsScreen.test.jsx  RuntimeEditor.jsx  SettingsScreen.jsx  SettingsScreen.test.jsx  SetupScreen.jsx  SetupScreen.test.jsx  TempArc.jsx  TempArc.test.jsx  api.js  api.test.js  hub.jsx  styles.css  timeUtils.js  timeUtils.test.js  utils.js
docs/: BEDJET_BLE_API_REFERENCE.md  BEDJET_QUIRKS.md  BEDJET_SYSTEM_ARCHITECTURE.md
hub/: bedjet-hub.service  pyproject.toml
hub/bedjet_hub/: __init__.py  __main__.py  ble_daemon.py  config.py
hub/bedjet_hub/api/: routes_device.py  routes_preferences.py  routes_programs.py  server.py  websocket.py
hub/bedjet_hub/ble/: const.py  ipc_client.py  ipc_server.py  manager.py  protocol_v2.py  protocol_v3.py  state.py
hub/bedjet_hub/db/: database.py
hub/bedjet_hub/scheduler/: runner.py
hub/tests/: test_ipc_client.py  test_ipc_server.py  test_startup.py
hub/tests/test_api/: test_routes_device.py  test_routes_preferences.py  test_routes_programs.py
hub/tests/test_ble/: test_const.py  test_manager.py  test_protocol_v2.py  test_protocol_v3.py  test_state.py
hub/tests/test_scheduler/: test_runner.py
mcp/: SKILL.md  server.py
