[project]
name = "bedjet-hub"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["bleak>=0.21.0","fastapi>=0.110.0","uvicorn>=0.29.0","aiosqlite>=0.20.0","zeroconf>=0.131.0"]
[project.optional-dependencies]
dev = ["pytest>=8.0","pytest-asyncio>=0.23","httpx>=0.27"]
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["E501"]
